chating websocket 도메인틀 잡기

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    //web socket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 // Querydsl 설정부
