refactor: gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,5 @@ application.properties
 application.yml
 application.yaml
 application-secret.yaml
+application-local.yaml
+application-prod.yaml
