--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,13 @@ plugins {
 group = 'com.talktrip'
 version = '0.0.1-SNAPSHOT'
 
+java {
+    // Gradle Java Toolchain으로 컴파일/테스트 JDK를 21로 고정
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -41,7 +48,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-config'
 
-
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -53,8 +59,8 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 
     // querydsl JPAAnnotationProcessor 사용 지정
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
-    annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // S3 설정
     implementation 'software.amazon.awssdk:s3:2.20.0'
@@ -64,15 +70,17 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    //web socket
+    // web socket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     // toss payment
     implementation 'com.googlecode.json-simple:json-simple:1.1'
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    //redis
+
+    // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
 }
 
@@ -97,4 +105,3 @@ clean {
 tasks.named('test') {
     useJUnitPlatform()
 }
-
