--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ java {
 }
 
 configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
+    compileOnly { extendsFrom annotationProcessor }
+
+    mockitoAgent {
+        transitive = false
+        visible = false
     }
 }
 
@@ -68,7 +71,11 @@ dependencies {
     // 테스트
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'com.h2database:h2'
+    testImplementation "org.mockito:mockito-core:5.12.0"
+    mockitoAgent "org.mockito:mockito-agent:5.12.0"
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 
     // web socket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
@@ -80,8 +87,6 @@ dependencies {
 
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-
-
 }
 
 // Querydsl 설정부
