--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ group = 'com.talktrip'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    // Gradle Java Toolchain으로 컴파일/테스트 JDK를 21로 고정
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
@@ -36,6 +35,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     runtimeOnly 'com.mysql:mysql-connector-j'
