--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,59 @@
 version: '3.8'
 
 services:
-  kafka:
-    # Bitnami의 Kafka 4.0 이미지 (KRaft 모드 지원)
+  kafka-1:
     image: bitnami/kafka:4.0.0
-    container_name: kafka_kraft
+    container_name: kafka-1
     environment:
-      # 비암호화(PLAINTEXT) 리스너 사용 허용
       - ALLOW_PLAINTEXT_LISTENER=yes
-
-      # 1) KRaft 모드 활성화: broker + controller
       - KAFKA_CFG_PROCESS_ROLES=broker,controller
-
-      # 2) 브로커 겸 컨트롤러 노드 ID
       - KAFKA_CFG_NODE_ID=1
-
-      # 3) 컨트롤러 쿼럼(voter) 설정 (단일 노드므로 1@서비스명:PORT)
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-
-      # 4) 클라이언트/컨트롤러용 리스너
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
-
-      # 5) 외부(호스트)에서 접속할 주소
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://172.16.24.72:9092
-
-      # 6) 컨트롤러 통신 리스너 이름
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:19092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-1:9092,EXTERNAL://172.16.24.72:19092,CONTROLLER://kafka-1:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-
-      # 7) 리스너별 보안 프로토콜 매핑
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-
+      - KAFKA_CLUSTER_ID=G8kttRw-RuqQnlWsA17ROw
     ports:
-      - '9092:9092'   # Producer/Consumer 접속 포트
-      - '9093:9093'   # 내부 Controller 통신 포트
-
-    # 데이터를 로컬 볼륨에 저장 (프로젝트별 격리)
+      - "19092:19092"
     volumes:
-      - ./kafka-data:/bitnami/kafka/data
+      - ./kafka-1-data:/bitnami/kafka/data
 
-    # 처음 실행 시 스토리지 포맷(UUD 주입 등)은
-    # bitnami/kafka entrypoint가 자동으로 처리해 줍니다.
+  kafka-2:
+    image: bitnami/kafka:4.0.0
+    container_name: kafka-2
+    environment:
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_NODE_ID=2
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:29092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-2:9092,EXTERNAL://172.16.24.72:29092,CONTROLLER://kafka-2:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CLUSTER_ID=G8kttRw-RuqQnlWsA17ROw
+    ports:
+      - "29092:29092"
+    volumes:
+      - ./kafka-2-data:/bitnami/kafka/data
+
+  kafka-3:
+    image: bitnami/kafka:4.0.0
+    container_name: kafka-3
+    environment:
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_NODE_ID=3
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
+      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:39092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-3:9092,EXTERNAL://172.16.24.72:39092,CONTROLLER://kafka-3:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CLUSTER_ID=G8kttRw-RuqQnlWsA17ROw
+    ports:
+      - "39092:39092"
+    volumes:
+      - ./kafka-3-data:/bitnami/kafka/data
