--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,122 @@
-version: '3.8'
+#version: '3.8'
 
 services:
   kafka-1:
-    image: bitnami/kafka:4.0.0
+    image: confluentinc/cp-kafka:7.4.0
+    hostname: kafka-1
     container_name: kafka-1
-    environment:
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
-      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:19092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-1:9092,EXTERNAL://172.16.24.72:19092,CONTROLLER://kafka-1:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CLUSTER_ID=G8kttRw-RuqQnlWsA17ROw
     ports:
-      - "19092:19092"
+      - "9092:9092"   # EXTERNAL 리스너용
+      - "19092:19092" # CONTROLLER 포트 노출
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT'
+
+      # 리스너 바인딩 (컨테이너 내부)
+      KAFKA_LISTENERS: 'INTERNAL://0.0.0.0:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://0.0.0.0:19092'
+
+      # 광고 주소 (클라이언트 접속용)
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka-1:29092,EXTERNAL://localhost:9092'
+
+      # 브로커 간 통신은 INTERNAL 사용
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka-1:19092,2@kafka-2:19092,3@kafka-3:19092'
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+
+      # 기존 설정 유지
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+
+      # 장애 복구 후 리더 재분배 자동 설정
+      KAFKA_AUTO_LEADER_REBALANCE_ENABLE: 'true'
+      KAFKA_LEADER_IMBALANCE_CHECK_INTERVAL_SECONDS: 300
+      KAFKA_LEADER_IMBALANCE_PER_BROKER_PERCENTAGE: 10
+
+      KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
+      CLUSTER_ID: 'kSZhorQMRdCQ5okpxI5knA'
     volumes:
-      - ./kafka-1-data:/bitnami/kafka/data
+      - ./kafka-data/kafka-1-logs:/tmp/kraft-combined-logs
+    networks:
+      - kafka-network
 
   kafka-2:
-    image: bitnami/kafka:4.0.0
+    image: confluentinc/cp-kafka:7.4.0
+    hostname: kafka-2
     container_name: kafka-2
-    environment:
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_NODE_ID=2
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
-      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:29092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-2:9092,EXTERNAL://172.16.24.72:29092,CONTROLLER://kafka-2:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CLUSTER_ID=G8kttRw-RuqQnlWsA17ROw
     ports:
-      - "29092:29092"
+      - "9093:9092"   # EXTERNAL 리스너용 (호스트 9093 → 컨테이너 9092)
+      - "19093:19092" # CONTROLLER 포트
+    environment:
+      KAFKA_NODE_ID: 2
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT'
+
+      KAFKA_LISTENERS: 'INTERNAL://0.0.0.0:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://0.0.0.0:19092'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka-2:29092,EXTERNAL://localhost:9093'
+
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka-1:19092,2@kafka-2:19092,3@kafka-3:19092'
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+
+      # 장애 복구 후 리더 재분배 자동 설정
+      KAFKA_AUTO_LEADER_REBALANCE_ENABLE: 'true'
+      KAFKA_LEADER_IMBALANCE_CHECK_INTERVAL_SECONDS: 300
+      KAFKA_LEADER_IMBALANCE_PER_BROKER_PERCENTAGE: 10
+
+      KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
+      CLUSTER_ID: 'kSZhorQMRdCQ5okpxI5knA'
     volumes:
-      - ./kafka-2-data:/bitnami/kafka/data
+      - ./kafka-data/kafka-2-logs:/tmp/kraft-combined-logs
+    networks:
+      - kafka-network
 
   kafka-3:
-    image: bitnami/kafka:4.0.0
+    image: confluentinc/cp-kafka:7.4.0
+    hostname: kafka-3
     container_name: kafka-3
-    environment:
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_NODE_ID=3
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
-      - KAFKA_CFG_LISTENERS=INTERNAL://:9092,EXTERNAL://:39092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=INTERNAL://kafka-3:9092,EXTERNAL://172.16.24.72:39092,CONTROLLER://kafka-3:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=INTERNAL
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CLUSTER_ID=G8kttRw-RuqQnlWsA17ROw
     ports:
-      - "39092:39092"
+      - "9094:9092"   # EXTERNAL 리스너용 (호스트 9094 → 컨테이너 9092)
+      - "19094:19092" # CONTROLLER 포트
+    environment:
+      KAFKA_NODE_ID: 3
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT'
+
+      KAFKA_LISTENERS: 'INTERNAL://0.0.0.0:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://0.0.0.0:19092'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka-3:29092,EXTERNAL://localhost:9094'
+
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka-1:19092,2@kafka-2:19092,3@kafka-3:19092'
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+
+      # 장애 복구 후 리더 재분배 자동 설정
+      KAFKA_AUTO_LEADER_REBALANCE_ENABLE: 'true'
+      KAFKA_LEADER_IMBALANCE_CHECK_INTERVAL_SECONDS: 300
+      KAFKA_LEADER_IMBALANCE_PER_BROKER_PERCENTAGE: 10
+
+      KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
+      CLUSTER_ID: 'kSZhorQMRdCQ5okpxI5knA'
     volumes:
-      - ./kafka-3-data:/bitnami/kafka/data
+      - ./kafka-data/kafka-3-logs:/tmp/kraft-combined-logs
+    networks:
+      - kafka-network
+
+networks:
+  kafka-network:
+    driver: bridge
