--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'com.netflix.graphql.dgs.codegen:graphql-dgs-codegen-gradle:7.0.3'
     runtimeOnly 'com.mysql:mysql-connector-j'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // SQL logging (inline parameters)
+    implementation 'p6spy:p6spy:3.9.1'
 
     // JWT, Swagger
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
