--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,13 @@ dependencies {
 
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // Jakarta Annotations API (PostConstruct, PreDestroy 사용)
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+    // Jackson JSR-310(Java Time)
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+
 }
 
 // Querydsl 설정부
